# Offline-OPD-Analysis

./: .gitignore  README.md  baseline_table.py  coverage_sweep.py  crux_online_recovers.py  crux_support_hole.py  debug_tabular.py  debug_teacher.py  detailed_sweeps.py  gen_data.py  minimal_collision_test.py  patch_fulldist_control.py  patch_lr_sweep.py  patch_reward_sweep.py  pyproject.toml  reward_robustness_phase.py  run_baseline.py  scan_operating_point.py  smoke.py  verify_trap.py
experiments/: patch_ablation.py  patch_ablation_all.py  plots.py
opd_toy/: __init__.py  env.py  exact.py  methods.py  policies.py
