[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "opd-toy"
version = "0.1.0"
description = "An exact, sampling-free analysis of offline on-policy distillation under multi-turn agentic distribution shift."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[tool.setuptools]
packages = ["opd_toy"]
